# amazon-reviews-analysis

./: README.md  amazon-reviews-analysis.ipynb  pyproject.toml  random_search_results.csv  vectorizer.joblib
data/: products.json
models/: best_random_forest_params.joblib
