[tool.poetry]
name = "nltk-sentiment-scrape"
version = "0.1.0"
description = ""
authors = ["askador <fedosov0912@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
nltk = "^3.9.1"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
selenium = "^4.23.1"
lxml = "^5.3.0"
tqdm = "^4.66.5"
ipywidgets = "<8.0"
deep-translator = "^1.11.4"
environs = "^11.0.0"
deepl = "^1.18.0"
langdetect = "^1.0.9"
google-cloud-translate = "^3.16.0"
nlpaug = "^1.1.11"
transformers = "^4.44.2"
torch = "2.3.1"
imblearn = "^0.0"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
